ATLAS-1115: angular v15 update: updated, todo: material legacy migration to mdc

--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -3,7 +3,7 @@
 @use 'core/atlas-core';
 
 // Presentation framework
-@use '~bootstrap/scss/bootstrap';
+@use 'bootstrap/scss/bootstrap';
 
 // Theme (based on Material)
 @use 'theme';
