--- a/frontend/src/styles/_theme.scss
+++ b/frontend/src/styles/_theme.scss
@@ -18,5 +18,14 @@ $app-theme: mat.define-light-theme(
 
 // **Be sure that you only ever include this mixin once!**
 // Include the default theme styles (color and default density)
-@include mat.core(typography.$atlas-typography);
-@include mat.all-component-themes($app-theme);
+// TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
+//  The following line adds:
+//    1. Default typography styles for all components
+//    2. Styles for typography hierarchy classes (e.g. .mat-headline-1)
+//  If you specify typography styles for the components you use elsewhere, you should delete this line.
+//  If you don't need the default component typographies but still want the hierarchy styles,
+//  you can delete this line and instead use:
+//    `@include mat.legacy-typography-hierarchy(typography.$atlas-typography);`
+@include mat.all-legacy-component-typographies(typography.$atlas-typography);
+@include mat.legacy-core();
+@include mat.all-legacy-component-themes($app-theme);
