ATLAS-1115: angular v15 update: applied mdc migration tool, todo: lots of TODO(mdc-migration) to address and restyling material components

--- a/frontend/src/app/core/components/dialog/dialog.component.scss
+++ b/frontend/src/app/core/components/dialog/dialog.component.scss
@@ -21,17 +21,17 @@
     }
   }
 
-  .mat-dialog-container {
+  .mat-mdc-dialog-container {
     background: variables.$white;
     border-radius: variables.$border-radius;
     padding: 64px;
   }
 
-  .mat-dialog-content {
+  .mat-mdc-dialog-content {
     padding-top: 15px;
   }
 
-  .mat-dialog-actions {
+  .mat-mdc-dialog-actions {
     padding-top: 80px;
   }
 }
