--- a/frontend/src/app/core/components/route-to-dialog/route-to-dialog.component.scss
+++ b/frontend/src/app/core/components/route-to-dialog/route-to-dialog.component.scss
@@ -16,7 +16,7 @@
   overflow: unset;
   max-width: 100% !important;
 
-  .mat-dialog-container {
+  .mat-mdc-dialog-container {
     background: variables.$white;
     border-radius: variables.$border-radius;
     padding: 64px 80px 144px;
