--- a/frontend/src/app/core/components/user/user.component.scss
+++ b/frontend/src/app/core/components/user/user.component.scss
@@ -5,7 +5,7 @@
   border-radius: 8px;
 }
 
-.mat-button {
+.mat-mdc-button {
   padding: 0 3px;
 }
 
@@ -25,8 +25,6 @@
   padding: 3px 3px 3px 30px;
 }
 
-
 .user-roles-list-item {
   font-size: 10px;
 }
-
