--- a/frontend/src/app/pages/lidi/color-picker/rgb/rgb-picker.component.scss
+++ b/frontend/src/app/pages/lidi/color-picker/rgb/rgb-picker.component.scss
@@ -1,10 +1,10 @@
 @use 'src/styles/variables' as variables;
 
-.mat-form-field {
+.mat-mdc-form-field {
   width: 100%;
 }
 
-.mat-input-element {
+.mat-mdc-input-element {
   width: inherit;
 }
 
