--- a/frontend/src/app/core/components/table-search/table-search.component.scss
+++ b/frontend/src/app/core/components/table-search/table-search.component.scss
@@ -1,10 +1,12 @@
 @use 'src/styles/variables' as variables;
 
 :host::ng-deep {
+  /* TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version. */
+  /* TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version. */
   mat-form-field mat-chip-list .mat-chip-list-wrapper {
     margin-right: unset !important;
     padding-left: 0.3rem;
-
+    /* TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version. */
     mat-chip {
       min-height: 20px;
       padding: 0 7px;
@@ -12,12 +14,12 @@
     }
   }
 
-  .mat-standard-chip {
+  .mat-mdc-standard-chip {
     height: unset !important;
     word-break: break-all;
     max-width: 90%;
   }
-
+  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
   .search-box .mat-form-field-appearance-outline .mat-form-field-outline {
     background-color: variables.$gray-50;
     border-radius: 5px;
