--- a/frontend/src/app/core/components/table/table.component.scss
+++ b/frontend/src/app/core/components/table/table.component.scss
@@ -24,22 +24,22 @@ table {
   justify-content: space-between;
 }
 
-.mat-row:hover {
+.mat-mdc-row:hover {
   background-color: variables.$gray-100;
   cursor: pointer;
 }
 
 :host::ng-deep {
   // No padding on start and end of table
-  th.mat-header-cell:first-of-type,
-  td.mat-cell:first-of-type,
-  td.mat-footer-cell:first-of-type {
+  th.mat-mdc-header-cell:first-of-type,
+  td.mat-mdc-cell:first-of-type,
+  td.mat-mdc-footer-cell:first-of-type {
     padding-left: 0;
   }
 
-  th.mat-header-cell:last-of-type,
-  td.mat-cell:last-of-type,
-  td.mat-footer-cell:last-of-type {
+  th.mat-mdc-header-cell:last-of-type,
+  td.mat-mdc-cell:last-of-type,
+  td.mat-mdc-footer-cell:last-of-type {
     padding-right: 0;
   }
 
