ATLAS-1115: dependency updates, wip: material migration

--- a/frontend/src/app/core/components/button/atlas-button.component.html
+++ b/frontend/src/app/core/components/button/atlas-button.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="isButtonVisible()" [ngClass]="wrapperStyleClass + ' btn-' + buttonType">
   <button
+    mat-raised-button
     [class]="getButtonStyleClass()"
     (click)="buttonClicked.emit()"
     [type]="submitButton ? 'submit' : 'button'"
