--- a/frontend/src/styles/am-components/_mat-button.scss
+++ b/frontend/src/styles/am-components/_mat-button.scss
@@ -1,13 +1,8 @@
 @use 'src/styles/variables' as variables;
 
-/* TODO(mdc-migration): The following rule targets internal classes of button that may no longer apply for the MDC version. */
-.mat-button-focus-overlay {
-  background-color: transparent !important;
-}
-
-.mat-mdc-raised-button {
-  border-radius: variables.$border-radius !important;
-  padding: 10px 20px !important;
+button.atlas-raised-button {
+  border-radius: variables.$border-radius;
+  padding: 28px 20px;
 }
 
 .atlas-primary-btn {
