--- a/frontend/src/styles/am-components/_mat-form-field-default.scss
+++ b/frontend/src/styles/am-components/_mat-form-field-default.scss
@@ -21,21 +21,21 @@
 }
 
 /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-.mat-focused .mat-form-field-flex .mat-form-field-infix,
+/*.mat-focused .mat-form-field-flex .mat-form-field-infix,
 .mat-form-field-flex .mat-form-field-infix:hover {
   border-color: variables.$primary-300;
   @extend %bold-border;
   @extend %default-border-style;
-}
+}*/
 
 /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-.mat-form-field-disabled:hover .mat-form-field-flex .mat-form-field-infix {
+/*.mat-form-field-disabled:hover .mat-form-field-flex .mat-form-field-infix {
   @extend %default-border;
   margin-bottom: unset;
   margin-left: unset;
 }
 
-/* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
+/* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.
 .mat-form-field-invalid .mat-form-field-flex .mat-form-field-infix {
   border-color: variables.$warnColor;
   @extend %bold-border;
@@ -43,7 +43,7 @@
 }
 
 mat-form-field {
-  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
+  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.
   .mat-form-field-flex .mat-form-field-infix,
   .mat-form-field-disabled .mat-form-field-infix {
     @extend %default-border;
@@ -62,19 +62,19 @@ mat-form-field {
   height: 36px !important;
 }
 
-/* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
+/* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.
 .mat-form-field-appearance-outline .mat-form-field-prefix,
 .mat-form-field-appearance-outline .mat-form-field-suffix {
   top: 0.1em !important;
 }
 
-/* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
+/* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.
 .mat-form-field-appearance-legacy .mat-form-field-underline {
   display: none;
 }
 
 mat-form-field.atlas-text-area {
-  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
+  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.
   .mat-form-field-outline,
   .mat-form-field-outline-thick {
     color: variables.$gray-400;
@@ -84,4 +84,40 @@ mat-form-field.atlas-text-area {
 // Formfields in Detail Dialogs
 .detail-wrapper mat-form-field {
   margin-top: 16px;
+}
+*/
+
+mat-form-field[appearance='outline'] {
+  margin-top: 16px;
+
+  .mat-mdc-text-field-wrapper:hover {
+    .mdc-notched-outline__leading {
+      border-left: 3px solid red;
+    }
+
+    .mdc-notched-outline__trailing {
+      border-bottom: 3px solid red;
+      border-right: 3px solid red;
+    }
+  }
+
+  .mdc-notched-outline {
+    .mdc-notched-outline__leading {
+      border-top-left-radius: 0;
+      border-top: none;
+    }
+
+    .mdc-notched-outline__trailing {
+      border-top: none;
+      border-top-right-radius: 0;
+    }
+  }
+
+  .mat-mdc-form-field-flex {
+    .mat-mdc-form-field-infix {
+      min-height: 30px;
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+  }
 }
