ATLAS-1115: atlas-text-field validation fixed

--- a/frontend/src/app/core/form-components/text-field/text-field.component.scss
+++ b/frontend/src/app/core/form-components/text-field/text-field.component.scss
@@ -24,7 +24,8 @@ input {
     padding: 2px 3px 0 3px;
   }
 
-  &.ng-invalid:not(.ng-pristine) {
+  &.ng-invalid.ng-touched,
+  &.ng-invalid.ng-dirty {
     border-color: red;
     border-width: 3px;
 
