--- a/frontend/src/app/pages/lidi/lines/detail/line-detail-form/line-detail-form.component.html
+++ b/frontend/src/app/pages/lidi/lines/detail/line-detail-form/line-detail-form.component.html
@@ -36,61 +36,52 @@
 
   <div class="col-12 d-flex mt-3">
     <div class="d-flex flex-column col-12">
-      <mat-label class="font-bold-lg">{{ 'LIDI.LONG_NAME' | translate }} </mat-label>
-      <mat-label class="font-regular-sm">
-        {{ 'FORM.FOR_EXAMPLE' | translate }}
-        {{ 'Brig - Bern - Zürich HB - Romanshorn' }} |
-        {{ 'FORM.MAX_CHARS' | translate : { numberOfChars: 255 } }}
-      </mat-label>
-      <mat-form-field>
-        <input data-cy="longName" formControlName="longName" matInput />
-        <mat-error fieldErrors></mat-error>
-      </mat-form-field>
+      <atlas-text-field
+        [fieldExamples]="[
+          { label: 'FORM.FOR_EXAMPLE', translate: true },
+          { label: 'Brig - Bern - Zürich HB - Romanshorn', translate: false },
+          { label: 'FORM.MAX_CHARS', translate: true, numberOfChars: 255 }
+        ]"
+        controlName="longName"
+        data-cy="longName"
+        fieldLabel="LIDI.LONG_NAME"
+      >
+      </atlas-text-field>
     </div>
   </div>
 
   <div class="col-12 d-flex mt-3">
     <div class="d-flex flex-column col-4 pe-3">
-      <div class="info-icon-position">
-        <mat-label class="font-bold-lg required-indicator"
-          >{{ 'LIDI.SWISS_LINE_NUMBER' | translate }}
-        </mat-label>
-        <form-info-icon
-          infoLink
-          infoLinkTranslationKey="LIDI.SWISS_LINE_NUMBER_INFO_LINK"
-        ></form-info-icon>
-      </div>
-      <mat-label class="font-regular-sm">
-        {{ 'FORM.FOR_EXAMPLE' | translate }} {{ 'b0.IC8' }} |
-        {{ 'FORM.MAX_CHARS' | translate : { numberOfChars: 50 } }}
-      </mat-label>
-      <!--<mat-form-field>
-        <input data-cy="swissLineNumber" formControlName="swissLineNumber" matInput/>
-        <mat-error fieldErrors></mat-error>
-      </mat-form-field>-->
-      <atlas-text-field [controlName]="'swissLineNumber'"></atlas-text-field>
+      <atlas-text-field
+        [fieldExamples]="[
+          { label: 'FORM.FOR_EXAMPLE', translate: true },
+          { label: 'b0.IC8', translate: false },
+          { label: 'FORM.MAX_CHARS', translate: true, numberOfChars: 50 }
+        ]"
+        [required]="true"
+        controlName="swissLineNumber"
+        data-cy="swissLineNumber"
+        fieldLabel="LIDI.SWISS_LINE_NUMBER"
+        infoIconLink="LIDI.SWISS_LINE_NUMBER_INFO_LINK"
+      ></atlas-text-field>
     </div>
 
     <div class="d-flex flex-column col-4 pe-3">
-      <mat-label class="font-bold-lg">{{ 'LIDI.ALTERNATIVE_NAME' | translate }} </mat-label>
-      <mat-label class="font-regular-sm">
-        {{ 'FORM.MAX_CHARS' | translate : { numberOfChars: 50 } }}
-      </mat-label>
-      <mat-form-field>
-        <input data-cy="alternativeName" formControlName="alternativeName" matInput />
-        <mat-error fieldErrors></mat-error>
-      </mat-form-field>
+      <atlas-text-field
+        [fieldExamples]="[{ label: 'FORM.MAX_CHARS', translate: true, numberOfChars: 50 }]"
+        controlName="alternativeName"
+        data-cy="alternativeName"
+        fieldLabel="LIDI.ALTERNATIVE_NAME"
+      ></atlas-text-field>
     </div>
 
     <div class="d-flex flex-column col-4">
-      <mat-label class="font-bold-lg">{{ 'LIDI.COMBINATION_NAME' | translate }} </mat-label>
-      <mat-label class="font-regular-sm">
-        {{ 'FORM.MAX_CHARS' | translate : { numberOfChars: 50 } }}
-      </mat-label>
-      <mat-form-field>
-        <input data-cy="combinationName" formControlName="combinationName" matInput />
-        <mat-error fieldErrors></mat-error>
-      </mat-form-field>
+      <atlas-text-field
+        [fieldExamples]="[{ label: 'FORM.MAX_CHARS', translate: true, numberOfChars: 50 }]"
+        controlName="combinationName"
+        data-cy="combinationName"
+        fieldLabel="LIDI.COMBINATION_NAME"
+      ></atlas-text-field>
     </div>
   </div>
 
