--- a/frontend/src/app/pages/lidi/lines/detail/line-detail-form/line-detail-form.component.html
+++ b/frontend/src/app/pages/lidi/lines/detail/line-detail-form/line-detail-form.component.html
@@ -9,7 +9,7 @@
         [fieldExamples]="[
           { label: 'FORM.FOR_EXAMPLE', translate: true },
           { label: 'IC8', translate: false },
-          { label: 'FORM.MAX_CHARS', translate: true, numberOfChars: 50 }
+          { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '50' } }
         ]"
         controlName="number"
         data-cy="number"
@@ -23,7 +23,7 @@
         [fieldExamples]="[
           { label: 'FORM.FOR_EXAMPLE', translate: true },
           { label: 'Brig - Bern - Zürich HB - Romanshorn', translate: false },
-          { label: 'FORM.MAX_CHARS', translate: true, numberOfChars: 255 }
+          { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '255' } }
         ]"
         controlName="description"
         data-cy="description"
@@ -40,7 +40,7 @@
         [fieldExamples]="[
           { label: 'FORM.FOR_EXAMPLE', translate: true },
           { label: 'Brig - Bern - Zürich HB - Romanshorn', translate: false },
-          { label: 'FORM.MAX_CHARS', translate: true, numberOfChars: 255 }
+          { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '255' } }
         ]"
         controlName="longName"
         data-cy="longName"
@@ -56,7 +56,7 @@
         [fieldExamples]="[
           { label: 'FORM.FOR_EXAMPLE', translate: true },
           { label: 'b0.IC8', translate: false },
-          { label: 'FORM.MAX_CHARS', translate: true, numberOfChars: 50 }
+          { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '50' } }
         ]"
         [required]="true"
         controlName="swissLineNumber"
@@ -68,7 +68,9 @@
 
     <div class="d-flex flex-column col-4 pe-3">
       <atlas-text-field
-        [fieldExamples]="[{ label: 'FORM.MAX_CHARS', translate: true, numberOfChars: 50 }]"
+        [fieldExamples]="[
+          { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '50' } }
+        ]"
         controlName="alternativeName"
         data-cy="alternativeName"
         fieldLabel="LIDI.ALTERNATIVE_NAME"
@@ -77,7 +79,9 @@
 
     <div class="d-flex flex-column col-4">
       <atlas-text-field
-        [fieldExamples]="[{ label: 'FORM.MAX_CHARS', translate: true, numberOfChars: 50 }]"
+        [fieldExamples]="[
+          { label: 'FORM.MAX_CHARS', translate: true, arg: { key: 'numberOfChars', value: '50' } }
+        ]"
         controlName="combinationName"
         data-cy="combinationName"
         fieldLabel="LIDI.COMBINATION_NAME"
