--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -23,6 +23,7 @@
 @use 'am-components/mat-tab';
 @use 'am-components/mat-table';
 @use 'am-components/ng-select';
+@use 'am-components/mat-dialog';
 
 // App 3rd party components
 @use 'other-components/components';
