--- a/frontend/src/app/core/components/dialog/dialog.component.scss
+++ b/frontend/src/app/core/components/dialog/dialog.component.scss
@@ -1,41 +1,28 @@
 @use 'src/styles/variables' as variables;
 
-.atlas-dialog-panel {
-  .dialog-close-panel {
-    width: 100%;
-    text-align: right;
+:host {
+  display: block;
+}
 
-    button {
-      position: absolute;
-      padding: 0;
-      margin: -55px 0 0 20px;
-      width: 25px;
-      line-height: 25px;
-      height: 25px;
-      border-radius: 10px;
-      font-size: 24px;
-    }
+.dialog {
+  padding: 0 64px 24px 64px;
+}
 
-    .bi {
-      color: variables.$primary-400;
-    }
-  }
+.dialog-close-icon-container {
+  display: flex;
+  justify-content: end;
+}
 
-  .mat-mdc-dialog-container {
-    background: variables.$white;
-    border-radius: variables.$border-radius;
-    padding: 64px;
-  }
+.close-icon-btn {
+  border: unset;
+  background-color: unset;
+  padding: 5px 5px 0 0;
 
-  .mat-mdc-dialog-content {
-    padding-top: 15px;
-  }
-
-  .mat-mdc-dialog-actions {
-    padding-top: 80px;
+  em {
+    color: variables.$primary-400;
   }
 }
 
-.atlas-dialog-backdrop {
-  background: rgba(0, 0, 0, 0.5);
+mat-dialog-actions {
+  padding-top: 80px;
 }
