--- a/frontend/src/app/core/form-components/text-field/text-field.component.scss
+++ b/frontend/src/app/core/form-components/text-field/text-field.component.scss
@@ -52,3 +52,15 @@ input[disabled] {
   box-sizing: border-box;
   width: 100%;
 }
+
+.mat-form-field {
+  display: inline-block;
+  position: relative;
+  text-align: left;
+}
+
+.field-input-container {
+  display: flex;
+  width: 100%;
+  padding-left: 0.4375em;
+}
