--- a/frontend/src/app/pages/lidi/color-picker/cmyk/cmyk-picker.component.scss
+++ b/frontend/src/app/pages/lidi/color-picker/cmyk/cmyk-picker.component.scss
@@ -1,6 +1,7 @@
 .mat-mdc-form-field {
   width: 100%;
 }
+
 .mat-mdc-input-element {
   width: inherit;
 }
@@ -9,4 +10,10 @@
   display: flex;
   width: 100%;
   padding-left: 0.4375em;
+}
+
+.preview-color {
+  position: absolute;
+  margin-left: 10px;
+  margin-top: 11px;
 }
